--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
 body {
-    bacground: #CCCCCC
+    
 }
 
 #banner {
     width:100%;
+}
+
+.principal {
+    bacground: #CCCCCC
 }
 
 h1 {
@@ -24,4 +28,12 @@ em strong {
 
 .itens {
     font-style: italic
+}
+
+.beneficios {
+    background: #FFFFFF;
+}
+
+h2 {
+    text-align: center;
 }
