--- a/style.css
+++ b/style.css
@@ -7,10 +7,11 @@ body {
 }
 
 .principal {
-    bacground: #CCCCCC
+    background: #CCCCCC;
+    padding: 30px;
 }
 
-h1 {
+.titulo-centralizado {
     style="text-align: center"
 }
 
@@ -32,8 +33,16 @@ em strong {
 
 .beneficios {
     background: #FFFFFF;
+    padding: 20px;
 }
 
-h2 {
-    text-align: center;
+ul {
+    display: inline-block;
+    vertical-align: top;
+    width: 20%;
+    margin-right: 15%;
+}
+
+.imagembeneficios {
+    width: 50%;
 }
